# chunking-semantic

./: README.md
pdf-sempart/: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
pdf-sempart/config/: defaults.yaml  logging.yaml
pdf-sempart/examples/: demo_input.json  run.sh  sample.json  sample_doc_input.json  sample_doc_output.json
pdf-sempart/presentations/: sample_doc_sections.dot
pdf-sempart/src/pdf_sempart/: __init__.py
pdf-sempart/src/pdf_sempart/boundaries/: voter.py
pdf-sempart/src/pdf_sempart/cli/: sempart.py
pdf-sempart/src/pdf_sempart/embed/: encoder_b.py
pdf-sempart/src/pdf_sempart/io/: loaders.py  schema.py  writer.py
pdf-sempart/src/pdf_sempart/layout/: blocks.py  merge.py  order.py
pdf-sempart/src/pdf_sempart/nlp/: headings.py  preprocess.py
pdf-sempart/src/pdf_sempart/pipeline/: run.py
pdf-sempart/src/pdf_sempart/sectionize/: build.py
pdf-sempart/src/pdf_sempart/topics/: hlda.py
pdf-sempart/src/pdf_sempart/visualize/: docmap_graph.py
pdf-sempart/tests/: test_boundaries.py  test_headings.py  test_hlda.py  test_io.py  test_merge.py  test_order.py  test_pipeline_integration.py  test_pipeline_sample.py  test_sectionize.py  test_visualize.py
pdf-sempart/tests/data/: sample_report.json
presentations/: pdf_sempart_module_structure.dot  pdf_sempart_pipeline_flow.dot
