[project]
name = "pdf-sempart"
version = "0.1.0"
description = "Layout-aware semantic chunking for PDFs using hLDA and dual embeddings."
requires-python = ">=3.9"
dependencies = [
  "sentence-transformers>=3.0.0",
  "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "types-PyYAML"]
topics = ["tomotopy>=0.13.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
